--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,176 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<modelVersion>4.0.0</modelVersion>
+
+<groupId>com.whiskels</groupId>
+<artifactId>TelegramNotifierBot</artifactId>
+
+<version>1.2.3-SNAPSHOT</version>
+
+<properties>
+	<java.version>14</java.version>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+	<!-- Spring -->
+	<spring-boot.version>2.4.5</spring-boot.version>
+	<spring-retry.version>1.3.1</spring-retry.version>
+	<spring-aspects.version>5.3.10</spring-aspects.version>
+
+
+
+	<!-- TelegramBots Spring Boot Starter -->
+	<telegrambots-spring.version>0.24</telegrambots-spring.version>
+
+	<!-- Slack API -->
+	<slack-api.version>1.12.1</slack-api.version>
+
+	<!-- SnakeYaml -->
+	<snakeyaml.version>1.29</snakeyaml.version>
+
+	<!-- Google API -->
+	<google-api-client.version>1.30.4</google-api-client.version>
+	<google-oauth-client-jetty.version>1.30.6</google-oauth-client-jetty.version>
+	<google-sheets.version>v4-rev612-1.25.0</google-sheets.version>
+
+	<!-- Lombok -->
+	<lombok.version>1.18.20</lombok.version>
+
+	<!-- Hibernate -->
+	<hibernate.version>5.4.31.Final</hibernate.version>
+
+	<!-- Tests  -->
+	<assertj.version>3.16.1</assertj.version>
+	<mockito.version>3.10.0</mockito.version>
+
+		<groupId>com.google.apis</groupId>
+		<artifactId>google-api-services-sheets</artifactId>
+		<version>${google-sheets.version}</version>
+	<!--DB-->
+	<postgresql.version>42.2.24.jre7</postgresql.version>
+	<flyway.version>6.5.7</flyway.version>
+
+	<jackson-json.version>2.13.0</jackson-json.version>
+</properties>
+
+<dependencies>
+	<dependency>
+		<groupId>com.github.xabgesagtx</groupId>
+		<artifactId>telegram-spring-boot-starter</artifactId>
+		<version>${telegrambots-spring.version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>com.google.apis</groupId>
+		<artifactId>google-api-services-sheets</artifactId>
+		<version>${google-sheets.version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.springframework.retry</groupId>
+		<artifactId>spring-retry</artifactId>
+		<version>${spring-retry.version}</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-aspects</artifactId>
+		<version>${spring-aspects.version}</version>
+	</dependency>
+
+
+
+
+	<!-- Lombok -->
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>${lombok.version}</version>
+		<scope>provided</scope>
+	</dependency>
+
+	<!--DataBase-->
+	<dependency>
 		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.10</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>bot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>bot</name>
-	<description>Demo project for Spring Boot</description>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		<version>${spring-boot.version}</version>
+	</dependency>
 
-	<properties>
-		<java.version>11</java.version>
-		<telegrambots-spring.version>0.22</telegrambots-spring.version>
-	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>telrgram-spring-boot-starter</artifactId>
-			<version>${telegrambots-spring.version}</version>
-		</dependency>
-	</dependencies>
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<version>1.4.200</version>
+	</dependency>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<version>${spring-boot.version}</version>
+		<scope>test</scope>
+	</dependency>
 
+</dependencies>
+
+<build>
+	<finalName>TelegramNotifierBot</finalName>
+	<defaultGoal>package</defaultGoal>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.1</version>
+			<configuration>
+				<source>${java.version}</source>
+				<target>${java.version}</target>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.22.2</version>
+			<configuration>
+				<argLine>-Dfile.encoding=UTF-8</argLine>
+			</configuration>
+		</plugin>
+
+		<plugin>
+			<groupId>com.heroku.sdk</groupId>
+			<artifactId>heroku-maven-plugin</artifactId>
+			<version>3.0.3</version>
+			<configuration>
+				<appName>telegramnotifierbot</appName>
+				<processTypes>
+					<worker>
+						java $JAVA_OPTS -cp target/classes:target/dependency/* com.whiskels.notifier.App
+					</worker>
+				</processTypes>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>appassembler-maven-plugin</artifactId>
+			<version>1.1.1</version>
+			<configuration>
+				<assembleDirectory>target</assembleDirectory>
+				<programs>
+					<program>
+						<mainClass>App</mainClass>
+						<name>TelegramNotifierBot</name>
+					</program>
+				</programs>
+			</configuration>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>assemble</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
+</build>
 </project>
